# lucas-check-os-ver

./: .README.md.swp  README.md  pyproject.toml
src/lucas_check_os_ver/: hi.py
tests/: .test_first.py.swp  test_first.py
