[project]
name = "lucas-check-os-ver"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "lucas_hub12", email = "hyeonggyunbae@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/lucas-hub12/lucas-check-os-ver"
Issues = "https://github.com/lucas-hub12/lucas-check-os-ver/issues"
