[project]
name = "lucas-check-os-ver"
version = "0.3.0"
description = "Detects and outputs the os version"
authors = [
    {name = "lucas_hub12", email = "hyeonggyunbae@gmail.com"},
]
dependencies = ["stundrg-check-os-ver>=0.2.3", "check-os-ver>=0.2.1", "hj-check-os-version>=0.2.1", "jacob-os-version-check>=0.2.4", "cho-check-os-ver>=0.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/lucas-hub12/lucas-check-os-ver"
Issues = "https://github.com/lucas-hub12/lucas-check-os-ver/issues"

[project.scripts]
lucas-hi = "lucas_check_os_ver.hi:hi"
lucas-random = "lucas_check_os_ver.hi:random_pic"



